Update cucumber configuration and feature tests. Added report formats to cucumber.json, modified test script in package.json to create reports directory, and refactored feature and step definitions for improved scenario handling.

--- a/hellocucumber/package.json
+++ b/hellocucumber/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js"
+    "test": "mkdir -p reports && cucumber-js",
+    "test:jenkins": "mkdir -p reports && cucumber-js"
   },
   "keywords": [],
   "author": "",
